--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,51 @@
   <link rel="stylesheet" href="css/style.min.css">
   <title>Document</title>
 </head>
-
+<body>
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="logo" href="" >
+          <img class="logo__img" src="images/logo.png" alt="logo" >
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a  class="menu__list-link menu__list--link-active" href="#">HOME</a>
+              </li>
+              <li class="menu__list-item">
+                <a  class="menu__list-link" href="#">SHOP</a>
+              </li>
+              <li class="menu__list-item">
+                <a  class="menu__list-link" href="#">PAGE</a>
+              </li>
+              <li class="menu__list-item">
+                <a  class="menu__list-link" href="#">BLOG</a>
+              </li>
+              <li class="menu__list-item">
+                <a  class="menu__list-link" href="#">CONTACT</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="user-nav">
+            <a class="user-nav__link" href="#">
+              <img  class="user-nav__link-img" src="images/icons/user.svg" alt="">
+            </a>
+            <a class="user-nav__link" href="#">
+              <img class="user-nav__link-img" src="images/icons/search.svg" alt="">
+            </a>
+            <a class="user-nav__link" href="#">
+              <img class="user-nav__link-img" src="images/icons/heart.svg" alt="">
+              <span class="user-nav__num">3</span>
+            </a>
+            <a class="user-nav__link" href="#">
+              <img class="user-nav__link-img" src="images/icons/cart.svg" alt="">
+              <span class="user-nav__num">7 </span>
+            </a>
+          </div>
+        </a>
+      </div>  
+      </div>
+  </header>
   <script src="js/main.min.js"></script>
 </body>
 </html>
