--- a/app/index.html
+++ b/app/index.html
@@ -510,20 +510,20 @@
                 <a class="product-item__link" href="#">
                   <svg width="23px" height="20px">
                     <path fill-rule="evenodd" "
-                           d=" M16.894,-0.001 C14.470,-0.001 12.935,1.423 12.074,2.618 C11.851,2.929
-                      11.661,3.239 11.501,3.532 C11.342,3.239 11.152,2.929 10.928,2.618 C10.068,1.423 8.533,-0.001
-                      6.108,-0.001 C4.384,-0.001 2.810,0.697 1.675,1.964 C0.593,3.172 -0.004,4.791 -0.004,6.521
-                      C-0.004,8.405 0.744,10.157 2.349,12.034 C3.783,13.713 5.847,15.443 8.236,17.447 C9.127,18.193
-                      10.047,18.965 11.028,19.809 L11.057,19.834 C11.184,19.944 11.343,19.999 11.501,19.999
-                      C11.660,19.999 11.818,19.944 11.945,19.834 L11.975,19.809 C12.955,18.965 13.876,18.193
-                      14.766,17.447 C17.156,15.443 19.219,13.713 20.653,12.034 C22.258,10.157 23.006,8.405 23.006,6.521
-                      C23.006,4.791 22.410,3.172 21.327,1.964 C20.192,0.696 18.618,-0.001 16.894,-0.001 ZM13.892,16.437
-                      C13.124,17.080 12.334,17.743 11.501,18.455 C10.668,17.743 9.878,17.081 9.111,16.437 C4.434,12.516
-                      1.345,9.926 1.345,6.521 C1.345,5.114 1.821,3.806 2.687,2.840 C3.562,1.863 4.777,1.325 6.108,1.325
-                      C7.957,1.325 9.151,2.445 9.828,3.385 C10.435,4.228 10.752,5.078 10.860,5.404 C10.951,5.677
-                      11.209,5.862 11.501,5.862 C11.793,5.862 12.052,5.677 12.142,5.404 C12.250,5.078 12.567,4.228
-                      13.174,3.385 C13.851,2.445 15.046,1.325 16.894,1.325 C18.225,1.325 19.440,1.863 20.316,2.840
-                      C21.181,3.806 21.658,5.114 21.658,6.521 C21.658,9.926 18.568,12.516 13.892,16.437 Z" />
+                           d=" M16.894,-0.001 C14.470,-0.001 12.935,1.423 12.074,2.618 C11.851,2.929 11.661,3.239
+                      11.501,3.532 C11.342,3.239 11.152,2.929 10.928,2.618 C10.068,1.423 8.533,-0.001 6.108,-0.001
+                      C4.384,-0.001 2.810,0.697 1.675,1.964 C0.593,3.172 -0.004,4.791 -0.004,6.521 C-0.004,8.405
+                      0.744,10.157 2.349,12.034 C3.783,13.713 5.847,15.443 8.236,17.447 C9.127,18.193 10.047,18.965
+                      11.028,19.809 L11.057,19.834 C11.184,19.944 11.343,19.999 11.501,19.999 C11.660,19.999
+                      11.818,19.944 11.945,19.834 L11.975,19.809 C12.955,18.965 13.876,18.193 14.766,17.447
+                      C17.156,15.443 19.219,13.713 20.653,12.034 C22.258,10.157 23.006,8.405 23.006,6.521 C23.006,4.791
+                      22.410,3.172 21.327,1.964 C20.192,0.696 18.618,-0.001 16.894,-0.001 ZM13.892,16.437 C13.124,17.080
+                      12.334,17.743 11.501,18.455 C10.668,17.743 9.878,17.081 9.111,16.437 C4.434,12.516 1.345,9.926
+                      1.345,6.521 C1.345,5.114 1.821,3.806 2.687,2.840 C3.562,1.863 4.777,1.325 6.108,1.325 C7.957,1.325
+                      9.151,2.445 9.828,3.385 C10.435,4.228 10.752,5.078 10.860,5.404 C10.951,5.677 11.209,5.862
+                      11.501,5.862 C11.793,5.862 12.052,5.677 12.142,5.404 C12.250,5.078 12.567,4.228 13.174,3.385
+                      C13.851,2.445 15.046,1.325 16.894,1.325 C18.225,1.325 19.440,1.863 20.316,2.840 C21.181,3.806
+                      21.658,5.114 21.658,6.521 C21.658,9.926 18.568,12.516 13.892,16.437 Z" />
                   </svg>
                 </a>
               </div>
@@ -546,7 +546,59 @@
       </div>
     </section>
 
-
+    <div class="promo">
+      <div class="container">
+        <div class="promo__inner">
+          <p class="promo__subtitle">
+            Style Fashion
+          </p>
+          <h3 class="title">DEAL OF THE DAY</h3>
+          <div class="promo__clock" data-time="'2022-05-25'">
+            <div class="promo__clock-item">
+              <span class="promo__days"></span>
+              <div class="promo__text">Days</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__hours"></span>
+              <div class="promo__text">Hours</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__minutes"></span>
+              <div class="promo__text">Minutes</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__seconds"></span>
+              <div class="promo__text">Seconds</div>
+            </div>
+          </div>
+          <a class="promo__link" href="#">SHOP NOW</a>
+        </div>
+      </div>
+    </div>
+    <div class="partners">
+      <div class="container">
+        <ul class="partners__list">
+          <li class="partners__item">
+            <img src="images/partners/1.png" alt="partners logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/6.png" alt="partners logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/2.png" alt="partners logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/3.png" alt="partners logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/4.png" alt="partners logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/5.png" alt="partners logo">
+          </li>
+        </ul>
+      </div>
+    </div>
   </main>
 
 
