--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,10 @@
               <a class="menu__list-link menu__list--link-active" href="#">HOME</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">SHOP</a>
+              <a class="menu__list-link" href="shop.html">SHOP</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">PAGE</a>
+              <a class="menu__list-link" href="login.html">PAGE</a>
             </li>
             <li class="menu__list-item">
               <a class="menu__list-link" href="#">BLOG</a>
