--- a/app/login.html
+++ b/app/login.html
@@ -79,7 +79,7 @@
 <section class="modal">
   <div class="container">
     <div class="modal__links">
-      <a class="modal__link" href="">REGISTER</a>
+      <a class="modal__link" href="register.html">REGISTER</a>
       <a class="modal__link modal__link--active" href="">LOGIN</a>
     </div>
     <form action="modal__form">
