--- a/app/register.html
+++ b/app/register.html
@@ -80,7 +80,7 @@
   <div class="container">
     <div class="modal__links">
       <a class="modal__link modal__link--active" href="">REGISTER</a>
-      <a class="modal__link " href=""></a>LOGIN
+      <a class="modal__link " href="login.html"></a>LOGIN
     </div>
     <form action="modal__form">
       <label class="modal__label" >
